# imgui_app_base

./: CMakeLists.txt  Readme.md  Readme.rst  sync_to_wsl.sh  vcpkg.json
app_example/: CMakeLists.txt  build_wasm.sh  index.html  run_server.sh  vcpkg.json
app_example/src/: LogChannels.h  app_example.cpp  app_example.h  boost_log.cpp  boost_log.h  main.cpp  pch.h
src/: imgui_app_base.cpp  imgui_app_base.h  pch.h
